--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,42 @@
-image: node:latest
-
-cache:
-  paths:
-    - node_modules/
+image: docker:stable
 
 stages:
-  - install
-  - deploy
+  - build
 
-install_dependencies:
-  stage: install
+variables:
+  # When you use the dind service, you must instruct Docker to talk with
+  # the daemon started inside of the service. The daemon is available
+  # with a network connection instead of the default
+  # /var/run/docker.sock socket. Docker 19.03 does this automatically
+  # by setting the DOCKER_HOST in
+  # https://github.com/docker-library/docker/blob/d45051476babc297257df490d22cbd806f1b11e4/19.03/docker-entrypoint.sh#L23-L29
+  #
+  # The 'docker' hostname is the alias of the service container as described at
+  # https://docs.gitlab.com/ee/ci/services/#accessing-the-services.
+  #
+  # Specify to Docker where to create the certificates. Docker
+  # creates them automatically on boot, and creates
+  # `/certs/client` to share between the service and job
+  # container, thanks to volume mount from config.toml
+  DOCKER_TLS_CERTDIR: "/certs"
+
+
+services:
+  - docker:dind
+
+build_image:
+  stage: build
   tags:
     - ohtu-build-4
   script:
-    - apt-get update -y
-    - apt-get install -y zip
-    - npm ci
-    - zip -r package.zip .
-  artifacts:
-    paths:
-      - package.zip
-
+    - echo "Logging into quay..."
+    - echo $QUAY_PASSWORD | docker login -u $QUAY_USERNAME --password-stdin quay.io
+    - echo "Building image..."
+    - docker build -t compass-backend .
+    - echo "Tagging main image..."
+    - docker tag compass-backend quay.io/tike/compass-backend:main
+    - echo "Pushing main image..."
+    - docker push quay.io/tike/compass-backend:main
 
 deploy_azure:
   tags:
@@ -29,4 +45,5 @@ deploy_azure:
   image: mcr.microsoft.com/azure-cli
   script:
     - az login --service-principal -u $AZURE_USERNAME -p $AZURE_PASSWORD --tenant $AZURE_TENANT_ID
-    - az webapp deployment source config-zip --resource-group $AZURE_RESOURCE_GROUP --name $AZURE_APP_NAME --src package.zip
+    - az group create --name Self-Reflection-Compass --location northeurope
+    - az container create --resource-group Self-Reflection-Compass --name compass-backend --image quay.io/tike/compass-backend:main --dns-name-label compass-backend-dns --ports 8080
