get yaml file from snippet

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,7 @@ deploy_azure:
   before_script:
     - apk update
     - apk add --update gettext git
-    - git clone https://version.helsinki.fi/snippets/77.git
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@version.helsinki.fi/snippets/77.git
   script:
     - az login --service-principal -u $AZURE_USERNAME -p $AZURE_PASSWORD --tenant $AZURE_TENANT_ID
     - az group create --name Self-Reflection-Compass --location northeurope
