--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,7 @@ deploy_azure:
     - az group create --name Self-Reflection-Compass --location northeurope
     - cd compass-configurations
     - envsubst < compass-azure-multi-container.yaml > output.yaml
-    - az container create --resource-group Self-Reflection-Compass --file output.yaml --overwrite-existing
-    #- az container delete --resource-group Self-Reflection-Compass --name compass-backend --yes
-    #- az container create --resource-group Self-Reflection-Compass --name compass-backend --image quay.io/tike/compass-backend:main --dns-name-label compass-backend-dns --ports 8080 --environment-variables AZURE_NODEJS_IP='0.0.0.0'
+    # Delete the existing container group (if exists)
+    - az container delete --name compass-container-group --resource-group Self-Reflection-Compass --yes
+    # Create a new container group
+    - az container create --resource-group Self-Reflection-Compass --file output.yaml
