--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,3 +1,3 @@
-compass-backend-dns.northeurope.azurecontainer.io {
+self-reflection-compass.northeurope.azurecontainer.io {
     reverse_proxy localhost:8080
 }
