--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,9 +35,9 @@ build_image:
     - echo "Building image..."
     - docker build -t compass-backend .
     - echo "Tagging main image..."
-    - docker tag compass-backend quay.io/tike/compass-backend:main
+    - docker tag compass-backend quay.io/tike/compass-backend:test
     - echo "Pushing main image..."
-    - docker push quay.io/tike/compass-backend:main
+    - docker push quay.io/tike/compass-backend:test
 
 build_image_caddy:
   stage: build
@@ -50,9 +50,9 @@ build_image_caddy:
     - cd caddy
     - docker build -t compass-caddy-server .
     - echo "Tagging Compass Caddy image..."
-    - docker tag compass-caddy-server quay.io/tike/compass-caddy-server:main
+    - docker tag compass-caddy-server quay.io/tike/compass-caddy-server:test
     - echo "Pushing Caddy image..."
-    - docker push quay.io/tike/compass-caddy-server:main
+    - docker push quay.io/tike/compass-caddy-server:test
 
 
 deploy_azure:
@@ -72,5 +72,6 @@ deploy_azure:
     - envsubst < compass-azure-multi-container.yaml > output.yaml
     # Delete the existing container group (if exists)
     - az container delete --name compass-container-group --resource-group Self-Reflection-Compass --yes
+    - az container delete --name compass-container-group-test --resource-group Self-Reflection-Compass --yes
     # Create a new container group
     - az container create --resource-group Self-Reflection-Compass --file output.yaml
