--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ build_image_caddy:
     - echo $QUAY_PASSWORD | docker login -u $QUAY_USERNAME --password-stdin quay.io
     - echo "Building Compass Caddy image..."
     - cd caddy
+    - cd test
     - docker build -t compass-caddy-server .
     - echo "Tagging Compass Caddy image..."
     - docker tag compass-caddy-server quay.io/tike/compass-caddy-server:test
@@ -71,7 +72,6 @@ deploy_azure:
     - cd compass-configurations
     - envsubst < compass-azure-multi-container.yaml > output.yaml
     # Delete the existing container group (if exists)
-    - az container delete --name compass-container-group --resource-group Self-Reflection-Compass --yes
     - az container delete --name compass-container-group-test --resource-group Self-Reflection-Compass --yes
     # Create a new container group
     - az container create --resource-group Self-Reflection-Compass --file output.yaml
