--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,7 @@ deploy_azure:
     - az group create --name Self-Reflection-Compass --location northeurope
     - cd compass-configurations
     - envsubst < shibboleth-compass-azure-multi-container.yaml > output.yaml
+    - cat output.yaml
     #- envsubst < compass-azure-multi-container.yaml > output.yaml
     # Delete the existing container group (if exists)
     - az container delete --name compass-container-group-test --resource-group Self-Reflection-Compass --yes
