--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 image: docker:stable
 
 stages:
+  - test
   - build
   - deploy
 
@@ -24,6 +25,26 @@ variables:
 
 services:
   - docker:dind
+
+sonarqube-check:
+  stage: test
+  tags:
+    - ohtu-build-3
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [ "" ]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - sonar-scanner
+  allow_failure: true
+  only:
+    - main
 
 build_image:
   stage: build
@@ -71,8 +92,6 @@ deploy_azure:
     - az group create --name Self-Reflection-Compass --location northeurope
     - cd compass-configurations
     - envsubst < shibboleth-compass-azure-multi-container.yaml > output.yaml
-    - cat output.yaml
-    #- envsubst < compass-azure-multi-container.yaml > output.yaml
     # Delete the existing container group (if exists)
     - az container delete --name compass-container-group-test --resource-group Self-Reflection-Compass --yes
     # Create a new container group
