--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 image: docker:stable
 
 stages:
-  - test
+  - dependency-check
+  - sonarqube-check
   - build
   - deploy
 
@@ -27,9 +28,9 @@ services:
   - docker:dind
 
 sonarqube-check:
-  stage: test
+  stage: sonarqube-check
   tags:
-    - ohtu-build-3
+    - ohtu-build-4
   image:
     name: sonarsource/sonar-scanner-cli:latest
     entrypoint: [ "" ]
@@ -45,6 +46,30 @@ sonarqube-check:
   allow_failure: true
   only:
     - main
+  needs:
+    - job: dependency-check
+      artifacts: true
+
+dependency-check:
+  stage: dependency-check
+  only:
+    - main
+  tags:
+    - ohtu-build-4
+  allow_failure: true
+  image:
+    name: owasp/dependency-check-action:latest
+    entrypoint: [""]
+  script:
+    - >
+      /usr/share/dependency-check/bin/dependency-check.sh
+      --project compass-backend --scan . --enableExperimental
+      --format JSON -nvdApiKey $NVD_API_KEY
+  artifacts:
+    when: always
+    expire_in: 1 week
+    paths:
+      - dependency-check-report.json
 
 build_image:
   stage: build
