--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=compass-backend
 sonar.qualitygate.wait=true
-sonar.dependencyCheck.jsonReportPath=dependency-check-report.json
+sonar.dependencyCheck.jsonReportPath=dependency-check-report.html
