--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
 sonar.projectKey=compass-backend
 sonar.qualitygate.wait=true
 sonar.dependencyCheck.htmlReportPath=dependency-check-report.html
+# Exclude specific files from analysis
+sonar.exclusions=**/dependency-check-report.html
