added dependency check

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,8 @@ dependency-check:
 
 build_image:
   stage: build
+  only:
+    - main
   tags:
     - ohtu-build-4
   script:
@@ -87,6 +89,8 @@ build_image:
 
 build_image_caddy:
   stage: build
+  only:
+    - main
   tags:
     - ohtu-build-4
   script:
@@ -106,6 +110,8 @@ deploy_azure:
   tags:
     - ohtu-build-4
   stage: deploy
+  only:
+    - main
   when: manual
   image: mcr.microsoft.com/azure-cli
   before_script:
