--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "ipaddr.js": "^2.2.0",
+    "passport": "^0.7.0",
+    "passport-reverseproxy": "^0.1.0",
     "utf8": "^3.0.0"
   }
 }
