--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Antti Lankinen",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.24.0",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -20,6 +21,8 @@
     "ipaddr.js": "^2.2.0",
     "passport": "^0.7.0",
     "passport-reverseproxy": "^0.1.0",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "uuid": "^10.0.0",
+    "winston": "^3.14.2"
   }
 }
