--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,7 +81,7 @@ build_image:
     - echo "Logging into quay..."
     - echo $QUAY_PASSWORD | docker login -u $QUAY_USERNAME --password-stdin quay.io
     - echo "Building image..."
-    - docker build -t compass-backend .
+    - docker build -t compass-backend -build-arg NODE_ENV=testing .
     - echo "Tagging main image..."
     - docker tag compass-backend quay.io/tike/compass-backend:test
     - echo "Pushing main image..."
