added prettier and husky with git pre-commit hook

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "jest": {
     "testEnvironment": "node"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "dependencies": {
     "@azure/storage-blob": "^12.24.0",
     "body-parser": "^1.20.2",
@@ -32,6 +37,9 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.13",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "pretty-quick": "^4.0.0",
+    "husky": "^9.1.6"
   }
 }
