--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   "jest": {
     "testEnvironment": "node"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+  "simple-git-hooks": {
+    "pre-commit": "pretty-quick --staged"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.24.0",
@@ -38,9 +36,10 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.13",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
-    "husky": "^9.1.6"
+    "simple-git-hooks": "^2.11.1"
   }
 }
