--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,7 @@ sonar.qualitygate.wait=true
 sonar.dependencyCheck.htmlReportPath=dependency-check-report.html
 # Exclude specific files from analysis
 sonar.exclusions=**/dependency-check-report.html
+# Configure severity mapping
+sonar.dependencyCheck.severity.high=7.0
+sonar.dependencyCheck.severity.medium=4.0
+sonar.dependencyCheck.severity.low=0.0
