added prod build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,3 +141,22 @@ build_image_caddy:
         - docker tag compass-caddy-server quay.io/tike/compass-caddy-server:test
         - echo "Pushing Caddy image..."
         - docker push quay.io/tike/compass-caddy-server:test
+
+
+build_image_caddy-prod:
+    stage: build
+    only:
+        - prod
+    tags:
+        - ohtu-build-4
+    script:
+        - echo "Logging into quay..."
+        - echo $QUAY_PASSWORD | docker login -u $QUAY_USERNAME --password-stdin quay.io
+        - echo "Building Compass Caddy image..."
+        - cd caddy
+        - cd test
+        - docker build -t compass-caddy-server .
+        - echo "Tagging Compass Caddy image..."
+        - docker tag compass-caddy-server quay.io/tike/compass-caddy-server:prod
+        - echo "Pushing Caddy image..."
+        - docker push quay.io/tike/compass-caddy-server:prod
