--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,6 +124,22 @@ build_image:
         - echo "Pushing main image..."
         - docker push quay.io/tike/compass-backend:test
 
+build_image-prod:
+    stage: build
+    only:
+        - prod
+    tags:
+        - ohtu-build-4
+    script:
+        - echo "Logging into quay..."
+        - echo $QUAY_PASSWORD | docker login -u $QUAY_USERNAME --password-stdin quay.io
+        - echo "Building image..."
+        - docker build -t compass-backend .
+        - echo "Tagging main image..."
+        - docker tag compass-backend quay.io/tike/compass-backend:prod
+        - echo "Pushing main image..."
+        - docker push quay.io/tike/compass-backend:prod
+
 build_image_caddy:
     stage: build
     only:
