--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,8 @@ sonarqube-check:
     needs:
         - job: dependency-check
           artifacts: true
+        - job: test
+          artifacts: true
 
 dependency-check:
     stage: dependency-check
@@ -106,6 +108,12 @@ test:
         - ohtu-build-4
     script:
         - npm run coverage
+    coverage: /All files\s*\|\s*([\d\.]+)/
+    artifacts:
+      name: compass-coverage
+      paths:
+        - coverage
+      expire_in: 1 hour
     extends: .dependencies_cache
 
 build_image:
