--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,10 @@
 sonar.projectKey=compass-backend
 sonar.qualitygate.wait=true
 sonar.dependencyCheck.htmlReportPath=dependency-check-report.html
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 # Exclude specific files from analysis
-sonar.exclusions=**/dependency-check-report.html
+sonar.exclusions=**/dependency-check-report.json,**/dependency-check-report.html,**/node_modules/**, **/*.test.js
+sonar.coverage.exclusions=**/node_modules/**, **/*.test.js
 # Configure severity mapping
 sonar.dependencyCheck.severity.high=7.0
 sonar.dependencyCheck.severity.medium=4.0
