--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ sonarqube-check:
         - sonar-scanner
     allow_failure: true
     only:
-        - scheduled
+        - schedules
     needs:
         - job: dependency-check
           artifacts: true
@@ -67,7 +67,7 @@ sonarqube-check:
 dependency-check:
     stage: dependency-check
     only:
-        - scheduled
+        - schedules
     tags:
         - ohtu-build-4
     allow_failure: true
