--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,8 @@ image: docker:stable
 stages:
     - setup
     - test
+    - dependency-track-sbom
+    - dependency-track-submit
     - dependency-check
     - sonarqube-check
     - build
@@ -24,6 +26,8 @@ variables:
     # container, thanks to volume mount from config.toml
     DOCKER_TLS_CERTDIR: '/certs'
     npm_config_cache: '$CI_PROJECT_DIR/.npm'
+    PROJECT_NAME: "compass-backend"
+    PROJECT_VERSION: "1.0.0"
 
 # Define a hidden job to be used with extends
 # Better than default to avoid activating cache for all jobs
@@ -38,6 +42,36 @@ variables:
 
 services:
     - docker:dind
+
+generate-sbom:
+    stage: dependency-track-sbom
+    image: node:22-alpine
+    only:
+        - schedules
+    tags:
+        - ohtu-build-4
+    script:
+        - npm ci
+        - npx @cyclonedx/cyclonedx-npm --output-file sbom.xml
+    artifacts:
+        expire_in: 1h
+        paths:
+            - sbom.xml
+
+submit-sbom:
+    image: alpine:latest
+    stage: dependency-track-submit
+    only:
+        - schedules
+    tags:
+        - ohtu-build-4
+    dependencies:
+        - generate-sbom
+    before_script:
+        - apk add --no-cache curl
+    script:
+        - "curl -X POST ${DTRACK_API_URL} -H 'Content-Type: multipart/form-data' -H 'X-Api-Key: '${DTRACK_API_KEY} -F 'projectName='${PROJECT_NAME} -F 'autoCreate=true' -F 'projectVersion='${PROJECT_VERSION} -F 'bom=@sbom.xml'"
+
 
 sonarqube-check:
     stage: sonarqube-check
@@ -88,7 +122,7 @@ dependency-check:
 # Define the process for setup stage
 setup:
     stage: setup
-    image: quay.io/tike/alpine-oc-node
+    image: node:22-alpine
     tags:
         - ohtu-build-4
     script:
@@ -103,7 +137,7 @@ setup:
 
 test:
     stage: test
-    image: quay.io/tike/alpine-oc-node
+    image: node:22-alpine
     tags:
         - ohtu-build-4
     script:
